<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selecting_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <RadioButton
        android:id="@+id/cairo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/cairo"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/dubai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/dubai"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/paris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/paris"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/london"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/london"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    <RadioButton
        android:id="@+id/canada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/padding_medium"
        android:text="@string/canada"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

</RadioGroup>